2006-06-31  Mickael Remond  <mickael.remond@process-one.net>

	* src/web/ejabberd_http_poll.erl: Messages polled between the
	the last client request and the polling timeout were lost. Those
	messages are now resent using ejabberd routing mechanisms.

2006-05-29  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_roster.erl: According to RFC3921 section 9.2, outbound
	subscribe presence packets must be sent, even if the user has already
	asked for subcription previously (subscription: none and pending: out).
	The mod_roster now conforms to this behaviour. 
	* src/mod_roster_odbc.erl: Likewise.

2006-05-27  Mickael Remond  <mickael.remond@process-one.net>

	* src/configure.ac: Added an optional check for krb5.h in
	configure. ejabberd can now be build directly on RedHat and
	OpenBSD.

2006-05-27  Alexey Shchepin  <alexey@sevcom.net>

	* src/msgs/sk.msg: Slovak translation (thanks to Juraj Michalek
	and SkLUG)

2006-05-26  Alexey Shchepin  <alexey@sevcom.net>

	* src/odbc/pg.sql: Updated

	* src/mod_shared_roster.erl: Updated

	* src/ejabberd_sm.erl: Bugfix

	* src/mod_roster.erl: Bugfix
	* src/mod_roster_odbc.erl: Likewise

2006-05-23  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_roster.erl: The subscribe request are now resend at login as
	long as they have not been answered. mod_roster do no more depends on
        mod_offline.
	* src/ejabberd_sm.erl: Likewise.
	* src/ejabberd_c2s.erl: Likewise.
	* src/mod_roster_odbc.erl: Likewise (The ODBC/relational support has
	not yet been tested).
	* src/mod_roster.hrl: Likewise.
	* src/mod_offline.erl: Likewise.
	* src/mod_offline_odbc.erl: Likewise.
	* odbc/pg.sql: Likewise.
	* odbc/mysql.sql: Likewise.

2006-05-22  Mickael Remond  <mickael.remond@process-one.net>
	
	* src/ejabberd_sm.erl: The max_user_sessions has been moved to
	host configuration.
	* src/ejabberd.cfg.example: Likewise.
	* doc/guide.tex: Likewise.

2006-05-21  Mickael Remond  <mickael.remond@process-one.net>
